feat: add TestFX and Mockito unit tests f + added cross-platform deps management scripts